fix: Fix the user detail api with using token instead of user_id
